    without lambda list.
  * bug fix: reader failed to signal END-OF-FILE inside an
    object representation. (reported by Nikodemus Siivola)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** LAST and [N]BUTLAST should accept a bignum.
    ** condition slot accessors are methods.
    ** (VECTOR NIL) is a subtype of STRING.

changes in sbcl-0.8.3 relative to sbcl-0.8.2:
  * SBCL now builds and runs on MacOS X (version 10.2), or perhaps
    more accurately, on the Darwin kernel running on PowerPC hardware.
    (thanks to Brian Mastenbrook, Pierre Mai and Patrik Nordebo)
  * bug fix: WITH-OUTPUT-TO-STRING (and MAKE-STRING-OUTPUT-STREAM) now
    accept and act upon their :ELEMENT-TYPE keyword argument.
    (reported by Edi Weitz)
  * bug fix: FILE-POSITION now accepts position designators up to
    ARRAY-DIMENSION-LIMIT or the extreme of the off_t range, whichever
    is the greater.  (thanks to Patrik Nordebo)
  * bug fix: MAKE-ARRAY ignored :INITIAL-CONTENTS NIL. (reported by
    Kalle Olavi Niemitalo)
  * bug fix: the CLASS-PROTOTYPE of the GENERIC-FUNCTION class is now
    printable.  (reported by Eric Marsden)

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.